implemented cleaner image editing library

--- a/style.css
+++ b/style.css
@@ -1,37 +1,22 @@
-#image {
-	font-family: "Courier New", Monospaced, sans-sarif;
-	color: black;
-	background-color: white;
-	cursor: crosshair;
-	white-space: pre;
-}
-.toolbox {
-	font-family: "Courier New";
-	font-size:10px;
-}
-.toolbox td {
-	text-align: center;
-	cursor: pointer;
-	padding: 5px;
-	border: 1px solid black;
-}
-.toolbox td[selected]{
-	color: white;
-	background-color: black;
-	cursor: none;
+#imageElem {
+    font-family: "Courier New", Monospaced, sans-sarif;
+    color: black;
+    background-color: white;
+    cursor: crosshair;
+    white-space: pre;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-.checktool {
-	font-family: "Courier New";
-	font-size:10px;
-	text-align: center;
-	cursor: pointer;
-	padding: 5px;
-	border: 1px solid black;
+#fgTextbox,#bgTextbox {
+    width: 15px;
 }
-.checktool[selected]{
-	color: white;
-	background-color: black;
-	cursor: none;
+#sizeTextbox {
+    width: 40px;
 }
 
+.pen {
+    text-align: center;
+}
